force-app/main/default/objects/SR_Effort__c/SR_Effort__c.object-meta.xml
<CustomObject>
    <label>SR Effort</label>
    <nameField>
        <displayFormat>SRE-{00000}</displayFormat>
        <label>SRE #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SR Efforts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>