force-app/main/default/objects/SR_Effort__c/fields/Efforts_in_Person_Days__c.field-meta.xml
<CustomField>
    <fullName>Efforts_in_Person_Days__c</fullName>
    <inlineHelpText>1        = 1 Day / 8 Hours
0.5     = Half Day / 4 Hours
0.25   = 2 Hours
0.125 = 1 Hour</inlineHelpText>
    <label>Efforts in Person Days</label>
    <precision>5</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>