force-app/main/default/objects/SR_Effort__c/fields/Support_Request__c.field-meta.xml
<CustomField>
    <fullName>Support_Request__c</fullName>
    <label>Support Request</label>
    <referenceTo>Support_Request__c</referenceTo>
    <relationshipLabel>SR Efforts</relationshipLabel>
    <relationshipName>SR_Efforts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>